--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Rewebrtc server</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+        <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon"/>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
