--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
   <div class="background-overlay" />
 </body>
 
+<script type="text/javascript" src="/script/check.js"></script>
 <script type="text/javascript" src="/script/prefix.js"></script>
 <script type="text/javascript" src="/script/services.js"></script>
 <script type="text/javascript" src="/script/video-conference.js"></script>
