--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <label class="join-label"></label>
       </div>
       <div class="form-group">
-          <input type="text" class="form-control name" placeholder="Enter your name"/>
+          <input type="text" class="form-control name" value="Hanoi" placeholder="Enter your name"/>
       </div>
       <div class="form-group">
           <button class="btn btn-primary" onClick="handleJoinConversationClick()">Join</button>
